--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,36 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+# serialization
+serde = "1.0.219"
+serde_derive = "1.0.219"
+bincode = "2.0.1"
+
+# #crypto
+ed25519-dalek = {version = "2.1.1", features = ["serde"]}
+sha2 = "0.10.9"
+rand = "0.8.5"
+hex = "0.4.3"
+
+# networking
+libp2p = { version = "0.55", features = ["tcp", "dns", "noise", "gossipsub", "yamux"] }
+
+# async runtime
+tokio = "1.45.0"
+
+# command line 
+clap = "4.5.38"
+
+# config parsing 
+config = "0.15.11"
+
+# logging
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+
+# testing & dev 
+proptest = "1.6.0"
+
+# storage 
+# rocksdb = "0.23.0"
