--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,14 @@ config = "0.15.11"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 
+# error handling
+anyhow = "1.0.86"
+
 # testing & dev 
 proptest = "1.6.0"
 
 # storage 
 # rocksdb = "0.23.0"
+
+[dev-dependencies]
+tempfile = "3.10.1"
