--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustchain"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 
@@ -38,7 +38,7 @@ config = "0.15.11"
 
 # logging
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
 
 # error handling
 anyhow = "1.0.86"
