--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 [dependencies]
 
 # serialization
-serde = "1.0.219"
+serde = { version = "1.0.198", features = ["derive"] }
 serde_derive = "1.0.219"
-bincode = { version = "2.0.1", features = ["serde"] }
+bincode = "2.0.0-rc.3"
 
 # #crypto
-ed25519-dalek = {version = "2.1.1", features = ["serde"]}
-sha2 = "0.10.9"
+ed25519-dalek = { version = "2.1.0", features = ["serde"] }
+sha2 = "0.10.8"
 rand = "0.8.5"
 hex = "0.4.3"
 
@@ -45,14 +45,14 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
 
 # error handling
-anyhow = "1.0.86"
-thiserror = "1.0.63"
+anyhow = "1.0.82"
+thiserror = "1.0.59"
 
 # testing & dev 
 proptest = "1.6.0"
 
 # storage 
-# rocksdb = "0.23.0"
+rocksdb = "0.22.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
