Implement initial chain synchronization and enhance network message handling
- Add functionality for initial chain synchronization by requesting missing blocks from peers after network connection.
- Introduce `SyncRequest` and `SyncResponse` message types for handling block synchronization.
- Update the message handling logic to process sync requests and responses, including validation and application of received blocks.
- Refactor network message handling to improve clarity and maintainability.
- Ensure proper error handling and logging throughout the synchronization process.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ libp2p = { version = "0.55", features = [
     "noise",
     # "dns",         # Temporarily disabled due to hickory-resolver feature issues
     "tcp",         # TCP transport
-    "mdns"         # mDNS for peer discovery
+    "mdns",        # mDNS for peer discovery
+    "request-response"  # For sync protocol
 ] }
 
 
