--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 # serialization
 serde = { version = "1.0.198", features = ["derive"] }
 serde_derive = "1.0.219"
+serde_json = "1.0"
 bincode = "2.0.0-rc.3"
 
 # #crypto
