--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_derive = "1.0.219"
 serde_json = "1.0"
+toml = "0.8"
 bincode = "2.0.0-rc.3"
 
 # #crypto
@@ -58,3 +59,27 @@ rocksdb = "0.22.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
+
+[[bin]]
+name = "create_validator_key"
+path = "src/bin/create_validator_key.rs"
+
+[[bin]]
+name = "debug_validator_key"
+path = "src/bin/debug_validator_key.rs"
+
+[[bin]]
+name = "debug_genesis"
+path = "src/bin/debug_genesis.rs"
+
+[[bin]]
+name = "debug_full_genesis"
+path = "src/bin/debug_full_genesis.rs"
+
+[[bin]]
+name = "debug_toml"
+path = "src/bin/debug_toml.rs"
+
+[[bin]]
+name = "debug_genesis_parsing"
+path = "src/bin/debug_genesis_parsing.rs"
